<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background ="@color/background"
    tools:context=".ui.fragments.DetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.DetailsFragment">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/button_back_layout"
                android:backgroundTint="@color/gray"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginStart="24dp" />

            <TextView
                android:id="@+id/photo_author"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="16sp"
                android:text=""
                android:textStyle="bold" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/on_error_layout"
            android:visibility="gone"
            android:layout_below="@id/header"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/image_not_found"
                android:contentDescription="@string/shows_text_from_figma" />

            <ImageView
                android:id="@+id/explore_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_below="@+id/imageView"
                android:layout_centerInParent="true"
                android:src="@drawable/explore"
                android:contentDescription="@string/redirects_to_main" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/save_download_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:visibility="visible"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/gray"
                android:layout_marginStart="24dp"
                android:background="@drawable/download_shape">

                <ImageButton
                    android:id="@+id/download_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/download_button_shape"
                    android:src="@drawable/ic_download" />

                <TextView
                    android:id="@+id/download_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:text="@string/download"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <ImageButton
                android:id="@+id/save_to_bookmarks"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/save_button_shape"
                android:backgroundTint="@color/gray"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_bookmarks_inactive"
                android:contentDescription="@string/saves_in_bookmarks" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/pictureCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="0dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:visibility="visible"
            android:layout_marginBottom="16dp"
            android:background="@drawable/default_card_image"
            android:backgroundTint="@color/gray"
            app:cardCornerRadius="25dp">

            <com.pvelll.newpexelsapp.ui.utils.ZoomableImageView
                android:id="@+id/picture_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/picture"
                android:scaleType="fitCenter"
                android:src="@drawable/default_card_image"
                android:background="@color/gray"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>