<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="style/SCREEN"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.BookmarksFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/bookmarks_string"
            android:textColor="@color/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/bookmarks"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/mulish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/main_bookmarks_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookmarks_string"
            app:layout_constraintVertical_bias="0.0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/picture_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="16dp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nothing_found_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="38dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookmarks_string">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/mulish"
                android:text="@string/you_haven_t_saved_anything_yet"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/explore_button_bookmarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/explore"
                android:fontFamily="@font/mulish"
                android:textSize="18sp"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>