<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.fragments.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:visibility="gone"
            android:indeterminate="false"
            android:max="100"
            android:progress="54"
            android:progressTint="@color/red" />

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/search_bar_shape"
                app:iconifiedByDefault="false"
                app:queryBackground="@null"
                app:searchIcon="@drawable/ic_search" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <HorizontalScrollView
                    android:id="@+id/scroll_features"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/scroll_linear_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:divider="@drawable/item_divider"
                        android:orientation="horizontal"
                        android:paddingStart="24dp"
                        android:showDividers="middle" />
                </HorizontalScrollView>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/picture_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp" />

            <LinearLayout
                android:id="@+id/no_data_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_results_found"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/explore_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/explore"
                    android:textSize="18sp"
                    android:textColor="@color/red"
                    android:fontFamily="@font/mulish"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/no_network_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/no_network_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_no_network"
                android:contentDescription="@string/no_network_image" />

            <TextView
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/try_again"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/mulish" />
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>